--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "prettier": "3.2.5",
     "stylelint": "^16.6.1",
     "stylelint-config-standard": "^36.0.0",
-    "typescript-eslint": "^7.12.0"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.12.0",
+    "webpack": "5.90.3",
+    "webpack-cli": "5.1.4"
   }
 }
