--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
   "author": "ZhongYT",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
+  },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "conventional-changelog-cli": "4.1.0",
     "eslint": "8.x",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.2",
