--- a/package.json
+++ b/package.json
@@ -6,23 +6,46 @@
   "author": "ZhongYT",
   "license": "MIT",
   "private": false,
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "ie >= 9",
+    "not op_mini all"
+  ],
   "scripts": {
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
+    "autoprefixer": "10.4.18",
+    "clean-webpack-plugin": "4.0.0",
     "conventional-changelog-cli": "4.1.0",
+    "cross-env": "7.0.3",
+    "css-loader": "6.10.0",
     "eslint": "8.x",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^15.4.0",
+    "html-webpack-plugin": "5.6.0",
+    "postcss": "8.4.35",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "8.1.1",
+    "postcss-normalize": "10.0.1",
+    "postcss-preset-env": "9.5.1",
     "prettier": "3.2.5",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
+    "style-loader": "3.3.4",
     "stylelint": "^16.6.1",
     "stylelint-config-standard": "^36.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.12.0",
     "webpack": "5.90.3",
-    "webpack-cli": "5.1.4"
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "5.0.3",
+    "webpack-merge": "5.10.0"
   }
 }
