--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "devDependencies": {
+    "@babel/core": "7.24.0",
+    "@babel/preset-react": "7.23.3",
+    "@babel/preset-typescript": "7.23.3",
     "@eslint/js": "^9.4.0",
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "babel-loader": "9.1.3",
     "clean-webpack-plugin": "4.0.0",
     "conventional-changelog-cli": "4.1.0",
     "cross-env": "7.0.3",
@@ -47,5 +53,9 @@
     "webpack-cli": "5.1.4",
     "webpack-dev-server": "5.0.3",
     "webpack-merge": "5.10.0"
+  },
+  "dependencies": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
