--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.24.0",
+    "@babel/plugin-transform-runtime": "7.24.0",
+    "@babel/preset-env": "7.24.0",
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
     "@eslint/js": "^9.4.0",
@@ -31,6 +33,7 @@
     "cross-env": "7.0.3",
     "css-loader": "6.10.0",
     "eslint": "8.x",
+    "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
@@ -55,6 +58,7 @@
     "webpack-merge": "5.10.0"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "7.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
