--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.0",
+    "@material-ui/core": "^4.12.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.24.0"
