--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.0",
     "@material-ui/core": "^4.12.4",
+    "@react-spring/web": "^9.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.24.0"
