--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@babel/runtime-corejs3": "7.24.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@react-spring/web": "^9.7.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
