--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@react-spring/web": "^9.7.3",
+    "@uiw/react-amap": "^7.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.24.0"
