--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "9.1.3",
     "clean-webpack-plugin": "4.0.0",
     "conventional-changelog-cli": "4.1.0",
+    "copy-webpack-plugin": "^12.0.2",
     "cross-env": "7.0.3",
     "css-loader": "6.10.0",
     "eslint": "8.x",
@@ -66,6 +67,7 @@
     "@uiw/react-amap": "^7.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.24.0"
   }
 }
