--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-react": "7.23.3",
     "@babel/preset-typescript": "7.23.3",
     "@eslint/js": "^9.4.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@types/react": "18.2.66",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
@@ -46,6 +47,7 @@
     "postcss-normalize": "10.0.1",
     "postcss-preset-env": "9.5.1",
     "prettier": "3.2.5",
+    "react-redux": "^9.1.2",
     "sass": "^1.77.5",
     "sass-loader": "^14.2.1",
     "style-loader": "3.3.4",
